error.txt
    Checking praborrow v0.8.0 (D:\Project\PraBorrow\crates\praborrow)
error[E0308]: mismatched types
  --> crates\praborrow\examples\distributed_bank.rs:48:12
   |
48 |     if let Some(mut account) = sovereign_account.try_get_mut() {
   |            ^^^^^^^^^^^^^^^^^   ------------------------------- this expression has type `Result<&mut BankAccount, SovereigntyError>`
   |            |
   |            expected `Result<&mut BankAccount, ...>`, found `Option<_>`
   |
   = note: expected enum `Result<&mut BankAccount, SovereigntyError>`
              found enum `Option<_>`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `praborrow` (example "distributed_bank") due to 1 previous error
